// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var B = require('./B');

class A extends B { }

module.exports = A;

=====================================output=====================================
var B = require("./B");

class A extends B {}

module.exports = A;

================================================================================
`;

exports[`B.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
var A = require('./A');

//class B extends A { }

module.exports = B;

=====================================output=====================================
var A = require("./A");

//class B extends A { }

module.exports = B;

================================================================================
`;
